--- a/lessons/lesson-1/workbook-1/index.html
+++ b/lessons/lesson-1/workbook-1/index.html
@@ -81,7 +81,7 @@
     <script src="../../../resources/javascript/dragula.min.js"></script>
     <script src="../../../resources/javascript/easytimer.min.js"></script>
     <script src="../../../resources/javascript/exercises/2nd-ed.min.js"></script>
-    <script src="../../../resources/javascript/genki.min.js"></script>
+    <script src="../../../resources/javascript/genki.js"></script>
 
     <script>
       Genki.generateQuiz({
