More TS changes

--- a/404.html
+++ b/404.html
@@ -96,7 +96,7 @@ layout: layout.html
       </ul>
     </footer>
 
-    <script src="https://sethclydesdale.github.io/genki-study-resources/resources/javascript/all.min.js"></script>
+    <script src="https://sethclydesdale.github.io/genki-study-resources/resources/javascript/all.js"></script>
     <script>
       (function (window, document) {
         if (
