fix misalignment between folder names and ids

--- a/help/japanese-guide/index.html
+++ b/help/japanese-guide/index.html
@@ -273,7 +273,7 @@
       </div>
 
       <div class="content-block">
-        <h3 class="section-title" id="tools">Useful Tools</h3>
+        <h3 class="section-title" id="study-tools">Useful Tools</h3>
         <p>
           Below is a list of tools that may be helpful to you when studying
           Japanese. Feel free to try some of them out!
