--- a/index.html
+++ b/index.html
@@ -143,7 +143,7 @@ layout: layout.html
           <li><a href="#lesson-22">Lesson 22: Education in Japan</a></li>
           <li><a href="#lesson-23">Lesson 23: Good-bye</a></li>
           <li><a href="#appendix">Appendix</a></li>
-          <li><a href="#tools">Study Tools</a></li>
+          <li><a href="#study-tools">Study Tools</a></li>
         </ul>
       </div>
 
@@ -5653,7 +5653,7 @@ layout: layout.html
       </ul>
     </div>
 
-    <h2 id="tools" class="lesson-title">Study Tools</h2>
+    <h2 id="study-tools" class="lesson-title">Study Tools</h2>
     <p>
       This section contains helpful tools and resources to aid with your
       studies, some of which can be used for creating your own custom exercises.
